Fix: Should fix position absoulte issue on mobile screens

--- a/src/components/gameComponents/game/game.module.css
+++ b/src/components/gameComponents/game/game.module.css
@@ -2,6 +2,8 @@
   display: grid;
   height: 90dvh;
   grid-template-rows: 1fr 11fr;
+  position: relative;
+
 }
 
 .gameInfoContainer {
@@ -12,6 +14,7 @@
 
 @media screen and (min-width: 576px) and (orientation: landscape) {
   .gameContainer {
+
   }
 
   .gameInfoContainer {
