--- a/src/pages/leaderBoardPage/leaderBoardPage.module.css
+++ b/src/pages/leaderBoardPage/leaderBoardPage.module.css
@@ -2,6 +2,7 @@
   height: 100dvh;
   width: 100dvw;
   justify-content: space-evenly;
+  position: relative;
 }
 
 @media screen and (min-width: 567px) and (orientation: landscape) {
